fix: overflow-wrap in card and make archive and delete function active when user do search

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -115,7 +115,8 @@
 
 .card .body-note {
   height: 200px;
-  overflow: auto;
+  overflow-y: auto;
+  overflow-wrap: break-word;
 }
 
 .body-note p {
